# code-execution-agent

./: .dockerignore  .env.example  .gitignore  .~lock.pivot_test.xlsx#  ARCHITECTURE.md  CLAUDE.md  CODE_WALKTHROUGH_TR.md  Dockerfile  Dockerfile.analysis  KARAR_OZETI.md  KURULUM_PLANI_MEVCUT_SUNUCU.md  MANAGEMENT_KARSILASTIRMA.md  MANAGEMENT_REHBERI.md  OKUMA_PLANI.md  OPENSANDBOX_SETUP.md  OPENSANDBOX_YERLI_VS_AWS.md  README.md  SANDBOX_DECISION.md  TEAM_GUIDE.md  TECHNICAL_GUIDE.md  TUTORIAL_TR.md  app.py  cleanup_sandboxes.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.streamlit/: config.toml
docker/: Dockerfile.server  sandbox.toml
docker/wheels/: deepagents-0.4.12-py3-none-any.whl
docs/: PATTERN_COMPARISON_SUMMARY.md  REACT_VS_PLAN_EXECUTE.md  skill-learning-llm-judge.md
scripts/: README.md  backup_agentic.sh  cleanup_agentic.sh  monitor_agentic.sh
skills/csv/: SKILL.md
skills/pdf/: SKILL.md
skills/visualization/: SKILL.md
skills/xlsx/: SKILL.md
skills/xlsx/references/: large_files.md  multi_file_joins.md
src/agent/: graph.py  prompts.py
src/sandbox/: manager.py
src/skills/: learner.py  loader.py  registry.py
src/storage/: db.py
src/tools/: artifact_store.py  download_file.py  execute.py  file_parser.py  generate_html.py  visualization.py
src/ui/: chat.py  components.py  session.py  styles.py
src/utils/: config.py  logging_config.py
tests/eval/: evaluators.py  refine.py  run_eval.py  runner.py  scenarios.py
tests/eval/configs/: basic_revenue.yaml  category_breakdown.yaml  full_pdf_report.yaml  multi_turn.yaml  (+1 more)
(+4 files in other folders)
