[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-analyze-d"
version = "0.1.0"
description = "Data analysis agent with Deep Agents + OpenSandbox"
requires-python = ">=3.12"
dependencies = [
    "deepagents",
    "langchain-anthropic>=1.4.0",
    "opensandbox",
    "opensandbox-code-interpreter",
    "streamlit>=1.40.0",
    "pandas",
    "openpyxl",
    "pdfplumber",
    "duckdb>=1.1.0",
    "python-dotenv",
    "Pillow",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mlflow[genai]>=2.18.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "skills*"]
